# legal-rag-assistant

./: .gitignore  README.md  main.py  pyproject.toml  rqmts.txt
src/: chunking.py  embedding.py  ingestion.py  llm.py  pipeline.py  retrieval.py  vectorstorage.py
