[project]
name = "law-rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-ollama>=1.1.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.0",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
]
